# pico-vt100

./: .gitignore  CMakeLists.txt  README-RU.md  README.md  TODO.md
assets/: convert.sh
demo/: CMakeLists.txt  demo_screens.c  demo_screens.h  logo_jpg.S  main.c  main_pico.c  main_sdl2.c  serial_port.c  serial_port.h
demo/assets/: convert.sh
demo/tools/: logo_from_magick.sh  png_to_logo.py
include/: ili9486l.h  ili9486l_jpeg.h  lcd_driver.h  lcd_jpeg.h  vt100_terminal.h
src/: font5x7.c  font5x7.h  font5x7_row_masks.c  ili9486l.c  ili9486l.h  ili9486l_internal.h  ili9486l_jpeg.c  jpeg_logo.c  jpeg_logo.h  lcd_jpeg.c  lcd_text.c  lcd_text.h  logo.h  logo_jpg.S  main.c  vt100_terminal.c  vt100_terminal.h  vt100_terminal_console.c  vt100_terminal_console.h  vt100_terminal_internal.h
src/drivers/ili9486l/: ili9486l.c  ili9486l.h
src/drivers/sdl2/: sdl2_lcd.c  sdl2_lcd.h
src/tjpgd/: tjpgdcnf.h
tests/host/: CMakeLists.txt  ili9486l_stub.c  lcd_driver_stub.c  vt100_terminal_test.c
tools/: logo_from_magick.sh  png_to_logo.py
